--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     android:layout_gravity="center_vertical"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/dice_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/result_text"
-        android:text="1"
-        android:textSize="30sp" />
+        android:src="@drawable/empty_dice" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
